--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "serialize-javascript": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
